--- a/index.html
+++ b/index.html
@@ -29,7 +29,16 @@
         <div class="number number12">XII</div>
     </div>
 
-    <div class="alarms"></div>
+    <div class="alarmSection">
+        <h2 id="heading">Alarms</h2>
+        <button id="btn">&#9547;</button>
+        <div id="line"></div>
+        <div class="alarms">
+            <ul id="list">
+
+            </ul>
+        </div>
+    </div>
 </body>
 
 </html>
